[package]
name = "strawberrymilk"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Abraham <youreccentricity@outlook.com>"]
description= "A small, sweet tool written in Rust to compile your content for the web."
homepage = "https://github.com/iamtheblackunicorn/strawberrymilk"
repository = "https://github.com/iamtheblackunicorn/strawberrymilk"
documentation = "https://github.com/iamtheblackunicorn/strawberrymilk"
readme = "README.markdown"
keywords = ["static", "site", "generator"]
categories = ["command-line-utilities"]
exclude = ["/.github", "example"]

[dependencies]
serde_json = "1.0.79"
markdown = "0.3.0"
fs_extra = "1.2.0"
